syntax = "proto3";

package post;

import "google/protobuf/timestamp.proto";
option go_package = "github.com/sultanfariz/simple-grpc/post";

service PostService {
  rpc GetAllPost(GetAllPostRequest) returns (GetAllPostResponse) {}
  rpc GetPostById(GetPostByIdRequest) returns (GetPostByIdResponse) {}
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {}
}

message Post {
  int32 id = 1;
  string title = 2;
  string content = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message GenericResponse {
  string status = 1;
  string message = 2;
}

message GetAllPostRequest {
  int32 page = 1;
  int32 limit = 2;
}

message GetAllPostResponse {
  GenericResponse meta = 1;
  repeated Post posts = 2;
}

message GetPostByIdRequest {
  int32 id = 1;
}

message GetPostByIdResponse {
  GenericResponse meta = 1;
  Post post = 2;
}

message CreatePostRequest {
  string title = 1;
  string content = 2;
}

message CreatePostResponse {
  GenericResponse meta = 1;
  Post post = 2;
}